--- a/le-delice.html
+++ b/le-delice.html
@@ -13,7 +13,7 @@
     <body >
         
         <header>
-            <p class="titre"><a href="index.html"><i class="fas fleche fa-arrow-left"></a></i>ohmyfood</p>   
+            <p class="titre"><a href="index.html"><i class="fas fleche fa-arrow-left"></i></a>ohmyfood</p>   
         </header>
             <p><img class="image_fond" src="css/le-delice.jpg" alt="photo menu le delice du sens"/></p>
         <section>
@@ -21,7 +21,7 @@
                 <div class="conteneur-plat">
                     <h1 class="titre-menu">À la française<i class="far coeurs fa-heart"></i></h1>
                     <article class="entree">
-                        <p class="entrer">ENTRÉES</p>
+                        <h2 class="entrer">ENTRÉES</h2>
                         <div class="ligne2 case1">
                                 <div class="text">
                                     <p class="nom-cartes">Tartare de thon</p> 
@@ -73,7 +73,7 @@
                     </article>  
 
                     <article class="plat">
-                        <p class="plats">PLATS</p>
+                        <h2 class="plats">PLATS</h2>
                         <div class="ligne2 case4">
                                 <div class="text">
                                     <p class="nom-cartes">Poulet rôti aux herbes de Provence </p> 
@@ -124,7 +124,7 @@
                         </article>   
 
                         <article class="desserts">
-                            <p class="dessert">DESSERTS</p>
+                            <h2 class="dessert">DESSERTS</h2>
                             <div class="ligne2 case7">
                                     <div class="text">
                                         <p class="nom-cartes">Farandole de desserts</p> 
@@ -181,7 +181,7 @@
                 </div>
             </div>          
             <footer>
-                <div class="conteneur-pied">
+                <div class="conteneur-pieds">
                     <h3 class="titre-pied">ohmyfood</h3>
                     <p class="proposer"><i class="fas fa-utensils"></i>Proposer un restaurant</p>
                     <p class="partenaire"><i class="fas fa-hands-helping"></i>Devenir partenaire</p>
@@ -189,6 +189,6 @@
                     <a href="#"><p class="contacter">Contact</p></a>
                 </div>
             </footer>
-    
+        </section>
     </body>
 </html>
