remplacement de la balise p ligne 24, 92 et 143 , fermeture de la balise section ligne 212, inversement des balise i et a ligne 15

--- a/la-note.html
+++ b/la-note.html
@@ -12,7 +12,7 @@
     <body>
 
         <header>
-            <p class="titre"><a href="index.html"><i class="fas fleche fa-arrow-left"></a></i>ohmyfood</p>   
+            <p class="titre"><a href="index.html"><i class="fas fleche fa-arrow-left"></i></a>ohmyfood</p>   
         </header>
         <p><img class="image_note" src="css/la-note.jpg" alt="photo menu la note enchantee"/></p>
         <section>
@@ -21,7 +21,7 @@
                  <div class="conteneur-plat">
                         <h1 class="titre-menu">La note enchantée<i class="far coeur fa-heart"></i></h1>
                         <article class="entree">
-                            <p class="entrer">ENTRÉES</p>
+                            <h2 class="entrer">ENTRÉES</h2>
                             <div class="ligne2 case1">
                                     <div class="text">
                                         <p class="nom-cartes">Ravioles de foie gras </p> 
@@ -89,7 +89,7 @@
                         </article>  
 
                         <article class="plat">
-                            <p class="plats">PLATS</p>
+                            <h2 class="plats">PLATS</h2>
                             <div class="ligne2 case5">
                                     <div class="text">
                                         <p class="nom-cartes">Noix de coquilles Saint-Jacques</p> 
@@ -140,7 +140,7 @@
                         </article>   
 
                         <article class="desserts">
-                            <p class="dessert">DESSERTS</p>
+                            <h2 class="dessert">DESSERTS</h2>
                             <div class="ligne2 case8">
                                     <div class="text">
                                         <p class="nom-cartes">Macaron noisette et chocolat</p> 
@@ -200,7 +200,7 @@
            
 
             <footer>
-                <div class="conteneur-pieds">
+                <div class="conteneur-pieds-note">
                     <h3 class="titre-pied">ohmyfood</h3>
                     <p class="proposer"><i class="fas fa-utensils"></i>Proposer un restaurant</p>
                     <p class="partenaire"><i class="fas fa-hands-helping"></i>Devenir partenaire</p>
@@ -209,5 +209,6 @@
                 </div>
             </footer>
     
+        </section>    
     </body>
 </html>
