remplacement de la balise p ligne 24,77 et 127, fermeture de la balise section ligne 195, inversement de la balise i et a ligne 15

--- a/la-palette.html
+++ b/la-palette.html
@@ -12,7 +12,7 @@
     <body>
 
         <header>
-            <p class="titre"><a href="index.html"><i class="fas fleche fa-arrow-left"></a></i>ohmyfood</p>   
+            <p class="titre"><a href="index.html"><i class="fas fleche fa-arrow-left"></i></a>ohmyfood</p>   
         </header>
         <p><img class="image_palette" src="css/la-palette.jpg" alt="photo menu la palette du gout"/></p>
         <section>
@@ -21,7 +21,7 @@
                     <div class="conteneur-plat">
                         <h1 class="titre-menu">La Palette du goût<i class="far coeur fa-heart"></i></h1> 
                         <article class="entree">
-                            <p class="entrer">ENTRÉES</p>
+                            <h2 class="entrer">ENTRÉES</h2>
                                 <div class="ligne2 case1">
                                         <div class="text">
                                             <p class="nom-cartes">Fricassée d'escargot</p> 
@@ -74,7 +74,7 @@
                         </article>  
 
                         <article class="plat">
-                            <p class="plats">PLATS</p>
+                            <h2 class="plats">PLATS</h2>
                             <div class="ligne2 case4">
                                     <div class="text">
                                         <p class="nom-cartes">Filet de boeuf aux herbes</p> 
@@ -124,7 +124,7 @@
                             </article>   
 
                             <article class="desserts">
-                                <p class="dessert">DESSERTS</p>
+                                <h2 class="dessert">DESSERTS</h2>
                                 <div class="ligne2 case7">                                   
                                         <div class="text">
                                             <p class="nom-cartes">Paris-Brest</p>                                         
@@ -181,7 +181,7 @@
                 </div>          
             <footer>
                 <div class="bas">
-                    <div class="conteneur-pied">
+                    <div class="conteneur-pieds">
                         <h3 class="titre-pied">ohmyfood</h3>
                         <div class="mentions">
                             <p class="proposer"><i class="fas fa-utensils"></i>Proposer un restaurant</p>
@@ -192,6 +192,6 @@
                     </div>
                 </div>    
             </footer>
-    
+        </section>
     </body>
 </html>
