--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
                     <div id="cadre1">
                         <h1 class="debut">Réservez le menu qui vous convient</h1>
                         <p class="texte-cadre">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+                        <div class="block">
                             <button class="bouton">
                                 <span class="text-bouton">Explorer nos restaurants</span>
                             </button>
+                        </div>
                     </div>
                 </section>
 
@@ -36,20 +38,24 @@
                     <h2 class="fonction">Fonctionnement</h2>
                     <div class="choix">
                         <div class="filtre">  
-                            <p class="chiffre">1</p>
-                            <div class="choisir"><i class="fas fa-mobile-alt " ></i>
+                            <div class="choisir">
+                                <p class="chiffre">1</p>
+                                <i class="fas fa-mobile-alt " ></i>
                                 <p>Choisissez un restaurant</p>
+                                
                             </div>
                         </div>    
                         <div class="filtre"> 
-                            <p class="chiffre">2</p>
-                            <div class="composez"> <i class="fas fa-list-ul"></i>
+                            <div class="composez">
+                                <p class="chiffre">2</p>
+                                <i class="fas fa-list-ul"></i>
                                 <p>Composez votre menu</p>
                             </div>
                         </div>    
                         <div class="filtre"> 
-                            <p class="chiffre">3</p>
-                            <div class="degustez"><i class="fas fa-store  "></i>
+                            <div class="degustez">
+                                <p class="chiffre">3</p>
+                                <i class="fas fa-store  "></i>
                                 <p>Dégustez au restaurant</p>
                             </div>   
                         </div>
