ajout de la dive carte photo ligne 72 et ligne 88

--- a/index.html
+++ b/index.html
@@ -69,10 +69,12 @@
                                     
                                     <div class="carte-hebergement">
                                         <a href="la-palette.html">
-                                            <img alt="la-palette-du-gout" class="photo" src="restaurants/la-palette.jpg">
-                                            <div class="nouveaux">
-                                                <p class="textes">Nouveau</p>
-                                            </div>
+                                            <div class="carte_photo">
+                                                <img alt="la-palette-du-gout" class="photo" src="restaurants/la-palette.jpg">
+                                                <div class="nouveaux">
+                                                    <p class="textes">Nouveau</p>
+                                                </div>
+                                            </div>    
                                             <p class="nom-carte">La Palette du goût</p>
                                             <p class="text-carte">Ménilmontant</p>
                                         </a>     
@@ -83,9 +85,11 @@
 
                                     <div class="carte-hebergement">
                                         <a href="la-note.html" >  
-                                            <img alt="la-note-enchantee" class="photo" src="restaurants/la-note.jpg">
-                                            <div class="nouveau">
-                                                <p class="texte">Nouveau</p>
+                                            <div class="carte_photo">    
+                                                <img alt="la-note-enchantee" class="photo" src="restaurants/la-note.jpg">
+                                                <div class="nouveau">
+                                                    <p class="texte">Nouveau</p>
+                                                </div>
                                             </div>
                                             <p class="nom-carte">La note enchantée</p>
                                             <p class="text-carte">Charonne</p>
