modification de la class texte en classe textes

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                             <div class="carte_photo">    
                                                 <img alt="la-note-enchantee" class="photo" src="restaurants/la-note.jpg">
                                                 <div class="nouveau">
-                                                    <p class="texte">Nouveau</p>
+                                                    <p class="textes">Nouveau</p>
                                                 </div>
                                             </div>
                                             <p class="nom-carte">La note enchantée</p>
