modification de id search en class

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </header>
 
                 <section>
-                     <form id=search>
+                     <form class="search">
                     <input class="rechercher" type="search" placeholder="Paris, Belleville">
                     <i class="fas map fa-map-marker-alt"></i> 
                     </form>
