enlevement de la div class place de article class dessert et ajout de la balise span lignes 24 77 et 127

--- a/la-palette.html
+++ b/la-palette.html
@@ -21,7 +21,7 @@
                     <div class="conteneur-plat">
                         <h1 class="titre-menu">La Palette du goût<i class="far coeur fa-heart"></i></h1> 
                         <article class="entree">
-                            <h2 class="entrer">ENTRÉES</h2>
+                            <h2><span class="entrer">ENTRÉES</span></h2>
                                 <div class="ligne2 case1">
                                         <div class="text">
                                             <p class="nom-cartes">Fricassée d'escargot</p> 
@@ -33,7 +33,7 @@
                                             <p>25€</p> 
                                             </div>  
                                             <div class="valide">
-                                                <i class="fas icone fa-check-circle"></i>
+                                                <i class="fas fa-check-circle icone"></i>
                                             </div> 
                                         </div>             
                                 </div>            
@@ -74,7 +74,7 @@
                         </article>  
 
                         <article class="plat">
-                            <h2 class="plats">PLATS</h2>
+                            <h2><span class="plats"> PLATS</span></h2>
                             <div class="ligne2 case4">
                                     <div class="text">
                                         <p class="nom-cartes">Filet de boeuf aux herbes</p> 
@@ -124,7 +124,7 @@
                             </article>   
 
                             <article class="desserts">
-                                <h2 class="dessert">DESSERTS</h2>
+                                <h2><span class="dessert">DESSERTS</span></h2>
                                 <div class="ligne2 case7">                                   
                                         <div class="text">
                                             <p class="nom-cartes">Paris-Brest</p>                                         
@@ -170,13 +170,14 @@
                                                 <i class="fas icone fa-check-circle"></i>
                                             </div> 
                                         </div> 
-                                </div>     
+                                </div>   
+                            </article>      
                                 <div class="place">
                                     <button class="boutons">
                                         <span class="text-boutons">Commander</span>
                                     </button>
                                 </div>
-                            </article>   
+                            
                     </div>
                 </div>          
             <footer>
