ajout de la balise span ligne 24, 75 et 126 , sortie de la class place de article class dessert, remplacement de la balise span par div ligne 177

--- a/la-francaise.html
+++ b/la-francaise.html
@@ -20,8 +20,8 @@
                     <div class="conteneur-plat">
                         <h1 class="titre-menu">À la française<i class="far coeurs fa-heart"></i></h1>
                         <article class="entree">
-                            <h2 class="entrer">ENTRÉES</h2>
-                            <div class="ligne2 case1">
+                            <h2><span class="entrer">ENTRÉES</span></h2>
+                            <div class="ligne2 case1 ">
                                     <div class="text">
                                         <p class="nom-cartes">FTartare de poulpe acidulé</p> 
                                         <p class="text-cartes">Aux zestes d'orange </p>
@@ -72,7 +72,7 @@
                         </article>  
 
                         <article class="plat">
-                            <h2 class="plats">PLATS</h2>
+                            <h2><span class="plats">PLATS</span></h2>
                             <div class="ligne2 case4">
                                     <div class="text">
                                         <p class="nom-cartes">Coquilles Saint-Jacques</p> 
@@ -119,11 +119,11 @@
                                                     <i class="fas icone fa-check-circle"></i>
                                                 </div> 
                                             </div>
-                                    </div>        
+                                    </div>     
                         </article>   
 
                             <article class="desserts">
-                                <h2 class="dessert">DESSERTS</h2>
+                                <h2><span class="dessert">DESSERTS</span></h2>
                                 <div class="ligne2 case7">
                                         <div class="text">
                                             <p class="nom-cartes">Pétales de violettes glacés</p> 
@@ -170,13 +170,14 @@
                                                 <i class="fas icone fa-check-circle"></i>
                                             </div> 
                                         </div> 
-                                </div>     
+                                </div> 
+                            </article>        
                                 <div class="place">
                                     <button class="boutons">
-                                        <span class="text-boutons">Commander</span>
+                                        <div class="text-boutons">Commander</div>
                                     </button>
                                 </div>
-                            </article>   
+                               
                     </div>
                 </div>          
                 
