--- a/le-delice.html
+++ b/le-delice.html
@@ -21,7 +21,7 @@
                 <div class="conteneur-plat">
                     <h1 class="titre-menu">À la française<i class="far coeurs fa-heart"></i></h1>
                     <article class="entree">
-                        <h2 class="entrer">ENTRÉES</h2>
+                        <h2><span class="entrer">ENTRÉES</span></h2>
                         <div class="ligne2 case1">
                                 <div class="text">
                                     <p class="nom-cartes">Tartare de thon</p> 
@@ -73,7 +73,7 @@
                     </article>  
 
                     <article class="plat">
-                        <h2 class="plats">PLATS</h2>
+                        <h2><span class="plats">PLATS</span></h2>
                         <div class="ligne2 case4">
                                 <div class="text">
                                     <p class="nom-cartes">Poulet rôti aux herbes de Provence </p> 
@@ -124,7 +124,7 @@
                         </article>   
 
                         <article class="desserts">
-                            <h2 class="dessert">DESSERTS</h2>
+                            <h2><span class="dessert">DESSERTS</span></h2>
                             <div class="ligne2 case7">
                                     <div class="text">
                                         <p class="nom-cartes">Farandole de desserts</p> 
@@ -171,13 +171,14 @@
                                          <i class="fas icone fa-check-circle"></i>
                                     </div> 
                                 </div> 
-                            </div>     
+                            </div> 
+                        </article>         
                             <div class="place">
                                 <button class="boutons">
-                                    <span class="text-boutons">Commander</span>
+                                    <div class="text-boutons">Commander</div>
                                 </button>
                             </div>
-                        </article>   
+                          
                 </div>
             </div>          
             <footer>
