modification de la balise div en p ligne 194

--- a/la-note.html
+++ b/la-note.html
@@ -191,7 +191,7 @@
                         </article>       
                              <div class="place">
                                 <button class="boutons">
-                                    <div class="text-boutons">Commander</div>
+                                    <p class="text-boutons">Commander</p>
                                 </button>
                              </div> 
                             
