--- a/la-francaise.html
+++ b/la-francaise.html
@@ -174,7 +174,7 @@
                             </article>        
                                 <div class="place">
                                     <button class="boutons">
-                                        <div class="text-boutons">Commander</div>
+                                        <p class="text-boutons">Commander</p>
                                     </button>
                                 </div>
                                
