--- a/la-palette.html
+++ b/la-palette.html
@@ -174,7 +174,7 @@
                             </article>      
                                 <div class="place">
                                     <button class="boutons">
-                                        <span class="text-boutons">Commander</span>
+                                        <p class="text-boutons">Commander</p>
                                     </button>
                                 </div>
                             
