--- a/le-delice.html
+++ b/le-delice.html
@@ -175,7 +175,7 @@
                         </article>         
                             <div class="place">
                                 <button class="boutons">
-                                    <div class="text-boutons">Commander</div>
+                                    <p class="text-boutons">Commander</p>
                                 </button>
                             </div>
                           
