remplacement de span par la balise  p ligne 31

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <p class="texte-cadre">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
                         <div class="block">
                             <button class="bouton">
-                                <span class="text-bouton">Explorer nos restaurants</span>
+                                <p class="text-bouton">Explorer nos restaurants</p>
                             </button>
                         </div>
                     </div>
