ajout adresse mail de contact ligne 191

--- a/la-palette.html
+++ b/la-palette.html
@@ -188,7 +188,7 @@
                             <p class="proposer"><i class="fas fa-utensils"></i>Proposer un restaurant</p>
                             <p class="partenaire"><i class="fas fa-hands-helping"></i>Devenir partenaire</p>
                             <p class="mention">Mentions légales</p>
-                            <a href="#"><p class="contacter">Contact</p></a>
+                            <a href="mailto:contact@ohmyfood.com"><p class="contacter">Contact</p></a>
                         </div>    
                     </div>
                 </div>    
