--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                         <h1 class="debut">Réservez le menu qui vous convient</h1>
                         <p class="texte-cadre">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
                         <div class="block">
-                            <button class="bouton">
+                            <div class="bouton">
                                 <p class="text-bouton">Explorer nos restaurants</p>
-                            </button>
+                            </div>
                         </div>
                     </div>
                 </section>
