--- a/la-francaise.html
+++ b/la-francaise.html
@@ -173,9 +173,9 @@
                                 </div> 
                             </article>        
                                 <div class="place">
-                                    <button class="boutons">
+                                    <div class="boutons">
                                         <p class="text-boutons">Commander</p>
-                                    </button>
+                                    </div>
                                 </div>
                                
                     </div>
