--- a/la-note.html
+++ b/la-note.html
@@ -190,9 +190,9 @@
                             </div>  
                         </article>       
                              <div class="place">
-                                <button class="boutons">
+                                <div class="boutons">
                                     <p class="text-boutons">Commander</p>
-                                </button>
+                                </div>
                              </div> 
                             
                             
