--- a/le-delice.html
+++ b/le-delice.html
@@ -174,9 +174,9 @@
                             </div> 
                         </article>         
                             <div class="place">
-                                <button class="boutons">
+                                <div class="boutons">
                                     <p class="text-boutons">Commander</p>
-                                </button>
+                                </div>
                             </div>
                           
                 </div>
